--- a/5-prompt-app/package.json
+++ b/5-prompt-app/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "4-car-rental-app",
+  "name": "5-prompt-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "stripe": "stripe listen --forward-to http://localhost:3001/api/checkout/webhook"
+    "lint": "next lint"
   },
   "dependencies": {
-    "millify": "^6.1.0",
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "stripe": "^14.14.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
