--- a/5-prompt-app/.env
+++ b/5-prompt-app/.env
@@ -1,5 +1,6 @@
 GOOGLE_ID=17289054675-q4gckfa29jh1jjiovt80b3thvrla775j.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 MONGODB_URL=mongodb+srv://admin:admin@notour.ihasugb.mongodb.net/?retryWrites=true&w=majority
-
+NEXTAUTH_URL=http://localhost:3001/
+NEXTAUTH_URL_INTERNAL=http://localhost:3001/
 NEXTAUTH_SECRET=XKa40Vha/Fbdk0VHBaXes+MhrLc0EdrkycB0kSZ0k/w=
